<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/number_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_greater_than"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:gravity="center"/>


    <Button
        android:id="@+id/yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:onClick="onYesNoClick"
        android:layout_marginVertical="10dp"/>

    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:onClick="onYesNoClick"/>
</LinearLayout>